# floodrisk

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/neuralgcm/: precip_forecast.yaml
configs/streamflow/: fgn_lstm_camels.yaml  fgn_lstm_production.yaml  lstm_camels.yaml  transformer_camels.yaml
floodrisk/: __init__.py  config.py  losses.py  torchharness.py
floodrisk/benchmark/: protocol.py
floodrisk/callbacks/: __init__.py  hydro_logger.py
floodrisk/data/: __init__.py
floodrisk/datasets/: __init__.py  downscaling.py  inundation.py  streamflow.py
floodrisk/evaluation/: benchmarks.py  evaluate.py  plots.py
floodrisk/features/: catchment.py  spatial.py  temporal.py
floodrisk/metrics/: __init__.py  ensemble.py  flood_event.py  hydrology.py
floodrisk/models/: __init__.py  downscaler.py  fgn_streamflow.py  inundation_cnn.py  lstm.py  transformer.py
floodrisk/neuralgcm_bridge/: __init__.py  cache.py  forecast.py  regrid.py
notebooks/: 01_data_exploration.ipynb  02_streamflow_training.ipynb  03_neuralgcm_precip.ipynb  04_evaluation.ipynb
scripts/: download_camels.py  evaluate.py  run_benchmark.py  run_neuralgcm_forecast.py  train_streamflow.py
tests/: conftest.py  test_datasets.py  test_fgn.py  test_metrics.py  test_models.py
